--- a/Backend/.env
+++ b/Backend/.env
@@ -1,4 +1,4 @@
-MONGO_URL = "mongodb+srv://manoj:manoj123@cluster0.l8s5peb.mongodb.net/meeshofullstack"
+MONGO_URL = "mongodb+srv://manoj:manoj123@cluster0.l8s5peb.mongodb.net/shopperstopfullstack"
 SECRET_KEY = "ManojNadar"
 # TWILIO_ACCOUNTSID = "ACff5f5f90dd4beda0818a9e625a9aa17b"
 # TWILIO_AUTHTOKEN = "713cf6c5bd99a621ecb9d9e99b945344"
